Fixed timeline view on mobile screens

--- a/src/components/Past/Past.css
+++ b/src/components/Past/Past.css
@@ -1,299 +1,121 @@
-.Past {
-  width: 100%;
-  height: 300px;
-}
-
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 2560px) {
   .Past {
-    height: 1100px;
+    width: 100%;
+  }
+
+  .logo {
+    width: 150px;
+    height: 150px;
+    align-self: center;
+    -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
+
+  .logobutton button {
+    font-family: BoldFont;
+    font-size: 18px;
+    font-weight: 700;
+    margin: 20px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    width: 175px;
+    height: 60px;
+    margin-top: 35px;
+    transition: 0.5s ease-in-out;
+    background: linear-gradient(transparent, rgba(0, 0, 0, 0.4)) top/100% 800%;
+  }
+
+  .logobutton button:hover {
+    background-position: bottom;
+    cursor: pointer;
+  }
+
+  .btn1 {
+    background-color: #92051a !important;
+    color: white;
+  }
+
+  .btn2 {
+    background-color: #49e6c0 !important;
+    color: white;
+  }
+
+  .btn3 {
+    background-color: #404ca3 !important;
+    color: white;
+  }
+
+  .btn4 {
+    background-color: #f1f1f1;
+    color: black;
+  }
+
+  .Hackathon {
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-top: 50px;
+  }
+
+  .circle {
+    height: 15px;
+    width: 15px;
+    background-color: black;
+    margin: auto;
   }
 
   .line {
-    visibility: hidden;
+    height: 60px;
+    background-color: black;
+    width: 3px;
+    margin: auto;
+    margin-top: -10px;
   }
 
-  .circle1 {
-    visibility: hidden;
-  }
-
-  .circle2 {
-    visibility: hidden;
-  }
-
-  .circle3 {
-    visibility: hidden;
-  }
-
-  .circle4 {
-    visibility: hidden;
-  }
-
-  .vline {
-    border-left: 3px solid grey;
-    height: 1250px;
+  .Timeline {
+    height: 3px;
+    background-color: black;
+    width: 850px;
     position: absolute;
-    left: 250px;
-    top: 125px;
-  }
-
-  .vcircle1 {
-    position: absolute;
-    border-radius: 50%;
-    background-color: grey;
-    height: 20px;
-    width: 20px;
-    left: 242px;
-    top: 190px;
-  }
-
-  .vcircle2 {
-    position: absolute;
-    border-radius: 50%;
-    background-color: grey;
-    height: 20px;
-    width: 20px;
-    left: 242px;
-    top: 520px;
-  }
-
-  .vcircle3 {
-    position: absolute;
-    border-radius: 50%;
-    background-color: grey;
-    height: 20px;
-    width: 20px;
-    left: 242px;
-    top: 850px;
-  }
-
-  .vcircle4 {
-    position: absolute;
-    border-radius: 50%;
-    background-color: grey;
-    height: 20px;
-    width: 20px;
-    left: 242px;
-    top: 1180px;
-  }
-
-  .logobutton1 img {
-    top: 110px !important;
-    left: 280px !important;
-  }
-
-  .logobutton1 button {
-    top: 260px !important;
-    left: 280px !important;
-  }
-
-  .logobutton2 img {
-    top: 440px !important;
-    left: 280px !important;
-  }
-
-  .logobutton2 button {
-    top: 590px !important;
-    left: 280px !important;
-  }
-
-  .logobutton3 img {
-    top: 770px !important;
-    left: 280px !important;
-  }
-
-  .logobutton3 button {
-    top: 920px !important;
-    left: 280px !important;
-  }
-
-  .logobutton4 img {
-    top: 1100px !important;
-    left: 280px !important;
-  }
-
-  .logobutton4 button {
-    top: 1250px !important;
-    left: 280px !important;
+    top: 364px;
+    left: 75px;
   }
 }
 
-.logobutton1 img {
-  width: 125px;
-  height: 125px;
-  position: absolute;
-  top: 100px;
-  left: 58px;
+@media screen and (max-width: 991px) {
+  .logobutton button {
+    margin-top: 50px;
+  }
+
+  .logo {
+    width: 200px;
+    height: 200px;
+    align-self: center;
+  }
+
+  .Hackathon {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+
+  .Timeline {
+    display: none;
+  }
+
+  .line {
+    display: none;
+  }
+
+  .circle {
+    display: none;
+  }
 }
 
-.logobutton1 button {
-  font-family: "Poppins", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  margin: 20px;
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  position: absolute;
-  width: 150px;
-  height: 60px;
-  top: 317px;
-  left: 58px;
-}
-
-.logobutton1 button:hover {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0 0);
-  cursor: pointer;
-}
-
-.logobutton2 img {
-  width: 125px;
-  height: 125px;
-  position: absolute;
-  top: 100px;
-  left: 290px;
-}
-
-.logobutton2 button {
-  font-family: "Poppins", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  margin: 20px;
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  position: absolute;
-  width: 150px;
-  height: 60px;
-  top: 317px;
-  left: 290px;
-}
-
-.logobutton2 button:hover {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0 0);
-  cursor: pointer;
-}
-
-.logobutton3 img {
-  width: 125px;
-  height: 125px;
-  position: absolute;
-  top: 100px;
-  left: 522px;
-}
-
-.logobutton3 button {
-  font-family: "Poppins", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  margin: 20px;
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  position: absolute;
-  width: 150px;
-  height: 60px;
-  top: 317px;
-  left: 522px;
-}
-
-.logobutton3 button:hover {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0 0);
-  cursor: pointer;
-}
-
-.logobutton4 img {
-  width: 125px;
-  height: 125px;
-  position: absolute;
-  top: 100px;
-  left: 752px;
-}
-
-.logobutton4 button {
-  font-family: "Poppins", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  margin: 20px;
-  border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 10px;
-  position: absolute;
-  width: 150px;
-  height: 60px;
-  top: 317px;
-  left: 752px;
-}
-
-.logobutton4 button:hover {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0 0);
-  cursor: pointer;
-}
-
-.btn1 {
-  background-color: #92051a;
-  color: white;
-}
-
-.btn2 {
-  background-color: #49e6c0;
-  color: white;
-}
-
-.btn3 {
-  background-color: #404ca3;
-  color: white;
-}
-
-.btn4 {
-  background-color: #f1f1f1;
-  color: black;
-}
-
-.line {
-  height: 3px;
-  background-color: grey;
-  width: 850px;
-  position: absolute;
-  top: 290px;
-  left: 80px;
-}
-
-.circle1 {
-  top: 281px;
-  height: 20px;
-  width: 20px;
-  left: 142px;
-  background-color: grey;
-  border-radius: 50%;
-  position: absolute;
-}
-
-.circle2 {
-  top: 281px;
-  height: 20px;
-  width: 20px;
-  left: 374px;
-  background-color: grey;
-  border-radius: 50%;
-  position: absolute;
-}
-
-.circle3 {
-  top: 281px;
-  height: 20px;
-  width: 20px;
-  left: 605px;
-  background-color: grey;
-  border-radius: 50%;
-  position: absolute;
-}
-
-.circle4 {
-  top: 281px;
-  height: 20px;
-  width: 20px;
-  left: 835px;
-  background-color: grey;
-  border-radius: 50%;
-  position: absolute;
+@media screen and (max-width: 511px) {
+  .Hackathon {
+    margin-top: 40px;
+    margin-bottom: 40px;
+  }
 }
